dark mode fix (#17)
I edit this directly on Github SDFJSKFJSK, what could go wrong??

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,12 +20,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background-color: #101315;
-  }
+body {
+  color: white;
+  background-color: #101315;
 }
